--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Phantom by HTML5 UP</title>
+		<title>CHUCHU GAME</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -53,6 +53,7 @@
 							<header>
 								<h1>CHUCHU GAME</h1>
 								<p>We are a fresh game studio. Currently focusing on independent game development, hoping to make some interesting games.</p>
+								<p>Contact Email : bd@chuchu.games</p>
 							</header>
 							<section class="tiles">
 								<article class="style1">
