--- a/index.html
+++ b/index.html
@@ -51,9 +51,11 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>CHUCHU GAME</h1>
-								<p>We are a fresh game studio. Currently focusing on independent game development, hoping to make some interesting games. </p>
-								<p>Contact Email : bd@chuchu.games</p>
+								<h1>丘丘互动（北京）科技有限公司</h1>
+								<p>我们是一支游戏开发团队，专注开发好玩的小游戏。</p>
+								<p>地址: 北京市海淀区苏家坨镇柳林路东7号2589</p>
+								<p>电话: +86 18511588178</p>
+								<p>邮箱: bd@chuchu.games</p>
 							</header>
 							<section class="tiles">
 								<article class="style1">
@@ -129,7 +131,7 @@
 								</ul>
 							</section>
 							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; 丘丘互动（北京）科技有限公司</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</footer>
