--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 									<span class="image">
 										<img src="images/pic02.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="parkourH5Web/index.html">
 										<h2>GAMES</h2>
 										<div class="content">
 											<p>Some online and in development games.</p>
